# WhistleDetector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WhistleDetector.pro  config.ini  setup_arm.md
resources/: config.ini
src/: application.cpp  application.h  config.h  detector.cpp  detector.h  main.cpp  settings.cpp  settings.h  visualizer.cpp  visualizer.h
